<resources>
    <string name="app_name">DeskneedLoginUI</string>
    <string name="welcome">welcome</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="passwords">Password</string>
    <string name="confirm_password">confirm password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_fragment">first fragment</string>
    <string name="item2">Item2</string>
    <string name="item3">item3</string>
    <string name="fourth_fragment">fourth_fragment</string>
</resources>
